[gd_scene load_steps=13 format=2]

[ext_resource path="res://characters/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://weapons/Gun.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://TeleportStone.tscn" type="PackedScene" id=4]
[ext_resource path="res://characters/Enemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://weapons/Grenade.tscn" type="PackedScene" id=6]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 200, 20, 200 )

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( -100, 10, 100, 100, 10, 100, -100, -10, 100, 100, 10, 100, 100, -10, 100, -100, -10, 100, 100, 10, -100, -100, 10, -100, 100, -10, -100, -100, 10, -100, -100, -10, -100, 100, -10, -100, 100, 10, 100, 100, 10, -100, 100, -10, 100, 100, 10, -100, 100, -10, -100, 100, -10, 100, -100, 10, -100, -100, 10, 100, -100, -10, -100, -100, 10, 100, -100, -10, 100, -100, -10, -100, 100, 10, 100, -100, 10, 100, 100, 10, -100, -100, 10, 100, -100, 10, -100, 100, 10, -100, -100, -10, 100, 100, -10, 100, -100, -10, -100, 100, -10, 100, 100, -10, -100, -100, -10, -100 )

[sub_resource type="CubeMesh" id=3]

[sub_resource type="ConcavePolygonShape" id=4]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.1, 0.1, 0.1 )

[sub_resource type="CubeMesh" id=6]
size = Vector3( 0.2, 0.2, 0.2 )

[node name="Main" type="Spatial"]
script = ExtResource( 3 )

[node name="Spatial" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5385, 0 )

[node name="Camera" type="Camera" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 0.258819, 0.965925, 0, -0.965925, 0.258819, 0, 7.5, 2.5 )
current = true

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5385, 0 )

[node name="RemoteTransform" type="RemoteTransform" parent="Player"]
remote_path = NodePath("../../Spatial")
update_rotation = false
update_scale = false

[node name="Floor" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -11, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Floor"]

[node name="CollisionShape" type="CollisionShape" parent="Floor/StaticBody"]
shape = SubResource( 2 )

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="MeshInstance3"]

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance3/StaticBody"]
shape = SubResource( 4 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.5, 0.866025, 0, -0.866025, -0.5, 0, 0, 0 )
shadow_enabled = true

[node name="Gun" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.86283, 0, 0 )
collision_mask = 5

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
margin_right = 14.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 7.0
margin_bottom = 111.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
margin_bottom = 14.0

[node name="Label2" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_bottom = 32.0

[node name="Label3" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
margin_top = 36.0
margin_bottom = 50.0

[node name="Label4" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
margin_top = 54.0
margin_bottom = 68.0

[node name="Label5" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
margin_top = 72.0
margin_bottom = 86.0

[node name="Label6" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
margin_top = 90.0
margin_bottom = 104.0

[node name="TeleportStone" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10 )

[node name="Enemy" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5 )

[node name="Grenade" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.04504, 1.01916, 0 )
collision_mask = 5

[node name="RigidBody" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.29133, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="RigidBody"]
shape = SubResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="RigidBody"]
mesh = SubResource( 6 )
material/0 = null
